[gd_scene load_steps=9 format=3 uid="uid://di6r4u2odhqe2"]

[ext_resource type="Texture2D" uid="uid://rlmgnpcedflb" path="res://icon.svg" id="1_1bki2"]
[ext_resource type="Script" uid="uid://bns4n0ukjcgl6" path="res://Scripts/fruit_collection.gd" id="1_8gfxb"]
[ext_resource type="PackedScene" uid="uid://cf6ava8086hif" path="res://Entities/Players/mini_game_player.tscn" id="2_8gfxb"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_o6v8h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvlh8"]
size = Vector2(100.73689, 116.512665)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_g8jrg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_381oc"]
size = Vector2(133, 656)

[sub_resource type="Curve2D" id="Curve2D_wvlh8"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1102, 0, 0, 0, 0, 0, 50, 0)
}
point_count = 2

[node name="FruitCollection" type="Node2D"]
script = ExtResource("1_8gfxb")

[node name="Fruits" type="Node2D" parent="."]
position = Vector2(-1, 0)

[node name="TempObstacles" type="Node2D" parent="."]
position = Vector2(-41, 57)

[node name="TempFloor" type="Node2D" parent="TempObstacles"]
position = Vector2(579, 650)
scale = Vector2(11.535, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="TempObstacles/TempFloor"]
position = Vector2(3.5543997, -10)
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_o6v8h")

[node name="Water" type="Sprite2D" parent="TempObstacles/TempFloor/StaticBody2D"]
modulate = Color(0, 0, 0.6666667, 1)
position = Vector2(0.086692676, 1)
texture = ExtResource("1_1bki2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TempObstacles/TempFloor/StaticBody2D"]
position = Vector2(-0.17338562, -3)
scale = Vector2(1, 0.9955997)
shape = SubResource("RectangleShape2D_wvlh8")

[node name="InvisWalls" type="Node2D" parent="TempObstacles"]

[node name="StaticBody2D" type="StaticBody2D" parent="TempObstacles/InvisWalls"]
position = Vector2(-24, 268)
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_g8jrg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TempObstacles/InvisWalls/StaticBody2D"]
shape = SubResource("RectangleShape2D_381oc")

[node name="StaticBody2D2" type="StaticBody2D" parent="TempObstacles/InvisWalls"]
position = Vector2(1262, 266)
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_g8jrg")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TempObstacles/InvisWalls/StaticBody2D2"]
shape = SubResource("RectangleShape2D_381oc")

[node name="MiniGamePlayer" parent="." instance=ExtResource("2_8gfxb")]
position = Vector2(548, 549)

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_wvlh8")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(1102, 0)
rotation = 3.1415927
scale = Vector2(1.1993349, 0.9999999)

[node name="FruitTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FruitTimer" to="." method="_on_fruit_timer_timeout"]
